# RAG_MCP_HACK

./: README.md
internal-docs-ai-assistant/: .env  pyproject.toml  requirements.txt
internal-docs-ai-assistant/chroma_db/: chroma.sqlite3
internal-docs-ai-assistant/deployment/: docker-compose.yml
internal-docs-ai-assistant/docs/: Project_documentation.md
internal-docs-ai-assistant/src/: main.py
internal-docs-ai-assistant/src/agents/: answer_generator.py  base_agent.py  context_enricher.py  document_classifier.py  quality_checker.py  query_rewriter.py  question_critic.py  retriever_agent.py  topic_classifier.py
internal-docs-ai-assistant/src/configs/: settings.py
internal-docs-ai-assistant/src/core/: orchestrator.py
internal-docs-ai-assistant/src/data/: vector_store.py
internal-docs-ai-assistant/src/data/chroma_db/: chroma.sqlite3
internal-docs-ai-assistant/src/mcp/: db.py  server.py
internal-docs-ai-assistant/src/mcp/schemas/: schemas.py
internal-docs-ai-assistant/src/mcp/tools/: analytics.py  document_search.py  knowledge_base.py
internal-docs-ai-assistant/src/telegram_bot/: bot.py  generator.py
internal-docs-ai-assistant/src/utils/: vector_store_client.py
internal-docs-ai-assistant/tests/test_agents/: conftest.py  generator.py  test_answer_generator.py  test_context_enricher.py  test_document_classifier.py  test_orchestrator.py  test_quality_checker.py  test_question_critic.py  test_retriever.py
internal-docs-ai-assistant/tests/test_agents/test_data/: Экспертная_работа_ПОИС_1.docx  Экспертная_работа_ПОИС_2.docx
internal-docs-ai-assistant/tests/test_mcp/: test_qdrant.py  test_server.py
