[project]
name = "internal-docs-ai-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Skillet323",email = "mr.borgachev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest (>=8.4.0,<9.0.0)",
    "ollama (>=0.5.1,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
