[tool.poetry]
name = "internal-docs-ai-assistant"
version = "0.1.0"
description = ""
authors = ["Skillet323 <mr.borgachev@gmail.com>"]
packages = [
  { include = "agents", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.13, <4.0"
langchain = "*"
ollama = "*"
python-docx = "*"
PyPDF2 = "*"
sentence-transformers = "*"
chromadb = "*"
qdrant-client = "*"
pytest = {version="*", optional=true}
pytest-asyncio = {version="*", optional=true}
langfuse = "*"
python-magic-bin = "^0.4.14"
nltk = "^3.9.1"
beautifulsoup4 = "^4.13.4"
pandas = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
