[tool.poetry]
name = "internal-docs-ai-assistant"
version = "0.1.0"
description = ""
authors = ["Skillet323 <mr.borgachev@gmail.com>"]
packages = [
  { include = "agents", from = "src" },
  { include = "core", from = "src" },
  { include = "utils", from = "src" },
  { include = "mcp", from = "src" },
  { include = "configs", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.13, <4.0"
langchain = "*"
ollama = "*"
python-docx = "*"
PyPDF2 = "*"
sentence-transformers = "*"
chromadb = "*"
qdrant-client = "*"
pytest = {version="*", optional=true}
pytest-asyncio = {version="*", optional=true}
langfuse = "*"
python-magic-bin = "^0.4.14"
nltk = "^3.9.1"
beautifulsoup4 = "^4.13.4"
pandas = "^2.3.0"
langgraph = "^0.4.8"
langchain-community = "^0.3.25"
langchain-huggingface = "^0.3.0"
langchain-chroma = "^0.2.4"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
pydantic = "^2.11.7"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
asyncpg = "^0.30.0"
redis = {extras = ["async"], version = "^6.2.0"}
python-dotenv = "^1.1.0"
psycopg2-binary = "^2.9.10"
httpx = "^0.28.1"
prometheus-client = "^0.22.1"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-asyncio = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
